RESOLVED FIXED207268
[macCatalyst] IBeam cursor doesn't show up when hovering over text form controls prior to editing
https://bugs.webkit.org/show_bug.cgi?id=207268
Summary [macCatalyst] IBeam cursor doesn't show up when hovering over text form contr...
Wenson Hsieh
Reported 2020-02-05 07:58:39 PST
Attachments
Patch (3.89 KB, patch)
2020-02-05 08:32 PST, Wenson Hsieh
no flags
Patch (3.86 KB, patch)
2020-02-05 08:36 PST, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2020-02-05 08:32:04 PST Comment hidden (obsolete)
Wenson Hsieh
Comment 2 2020-02-05 08:36:25 PST
WebKit Commit Bot
Comment 3 2020-02-05 10:22:07 PST
Comment on attachment 389812 [details] Patch Clearing flags on attachment: 389812 Committed r255827: <https://trac.webkit.org/changeset/255827>
WebKit Commit Bot
Comment 4 2020-02-05 10:22:08 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.